--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,18 @@ body {
     margin-bottom: 40px;
   }
 }
+.footer .social-media-item {
+  list-style: none;
+}
+.footer .social-media-link {
+  text-decoration: none;
+  font-size: 50px;
+  color: var(--primary);
+  transition: color 0.5s ease-in;
+}
+.footer .social-media-link:hover {
+  color: var(--light);
+}
 
 .logo {
   font-size: 70px;
