--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -132,5 +132,22 @@
       width: 200px;
       margin-bottom: 40px;
     }
+
+    &-item {
+      list-style: none;
+    }
+
+    &-link {
+      text-decoration: none;
+      font-size: 50px;
+      color: var(--primary);
+      transition: color 0.5s ease-in;
+
+      &:hover {
+        color: var(--light);
+      }
+
+      
+    }
   }
 }
